--- a/mobilemain.css
+++ b/mobilemain.css
@@ -8,6 +8,7 @@
     flex-direction: column;
     padding-left: 19px;
     padding-right: 20px;
+    margin-top: 0px;
   }
   header {
     height: 812px;
