--- a/styleFooter.css
+++ b/styleFooter.css
@@ -10,7 +10,7 @@
 .footertext {
   display: inline;
   color: rgb(49, 49, 49);
-  font-family: Golos Text, sans-serif;
+  font-family: 'Golos Text', serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 120%;
