--- a/main3.css
+++ b/main3.css
@@ -6,7 +6,7 @@
 }
 .top3text1 {
   color: rgb(49, 49, 49);
-  font-family: Merriweather;
+  font-family: 'Merriweather', serif;
   font-size: 54px;
   font-weight: 400;
   line-height: 120%;
@@ -17,7 +17,7 @@
 .top3textlow {
   position: relative;
   color: rgb(48, 87, 162);
-  font-family: Golos Text;
+  font-family: 'Golos Text', serif;
   font-size: 20px;
   font-weight: 400;
   line-height: 120%;
