--- a/main4.css
+++ b/main4.css
@@ -8,7 +8,8 @@
 }
 .main4toptext {
   color: rgb(49, 49, 49);
-  font-family: Merriweather;
+
+  font-family: 'Merriweather', serif;
   font-size: 54px;
   font-weight: 400;
   line-height: 120%;
@@ -73,7 +74,7 @@
 }
 .playertext {
   color: rgb(49, 49, 49);
-  font-family: Golos Text;
+  font-family: 'Golos Text', serif;
   font-size: 24px;
   font-weight: 600;
   line-height: 120%;
@@ -83,7 +84,7 @@
 }
 .playertext2 {
   color: rgb(49, 49, 49);
-  font-family: Golos Text;
+  font-family: 'Golos Text', serif;
   font-size: 20px;
   font-weight: 400;
   line-height: 120%;
@@ -102,7 +103,7 @@
   background-color: transparent;
   align-self: center;
   color: rgb(48, 87, 162);
-  font-family: Golos Text;
+  font-family: 'Golos Text', serif;
   font-size: 16px;
   font-weight: 500;
   line-height: 120%;
