--- a/mobileline.css
+++ b/mobileline.css
@@ -35,7 +35,7 @@
   }
   .textline {
     color: rgb(255, 255, 255);
-    font-family: Merriweather;
+    font-family: 'Merriweather', serif;
     font-size: 22px;
     font-weight: 400;
     line-height: 110%;
