--- a/mobilemain4.css
+++ b/mobilemain4.css
@@ -15,7 +15,8 @@
   }
   .main4toptext {
     color: rgb(49, 49, 49);
-    font-family: Merriweather;
+
+    font-family: 'Merriweather', serif;
     font-size: 36px;
     font-weight: 400;
     line-height: 39.6px;
@@ -32,7 +33,8 @@
   .handletext_mobile {
     position: relative;
     color: rgb(49, 49, 49);
-    font-family: Golos Text;
+    font-family: 'Golos Text', serif;
+
     font-size: 16px;
     font-weight: 400;
 
@@ -51,7 +53,7 @@
   }
   .playertext {
     color: rgb(49, 49, 49);
-    font-family: Golos Text;
+    font-family: 'Golos Text', serif;
     font-size: 24px;
     font-weight: 600;
     line-height: 120%;
@@ -62,7 +64,7 @@
   }
   .playertext2 {
     color: rgb(49, 49, 49);
-    font-family: Golos Text;
+    font-family: 'Golos Text', serif;
     font-size: 20px;
     font-weight: 400;
     line-height: 120%;
@@ -81,7 +83,7 @@
     background-color: transparent;
     align-self: center;
     color: rgb(48, 87, 162);
-    font-family: Golos Text;
+    font-family: 'Golos Text', serif;
     font-size: 16px;
     font-weight: 500;
     line-height: 120%;
