--- a/styleline.css
+++ b/styleline.css
@@ -35,7 +35,8 @@
 }
 .textline {
   color: rgb(255, 255, 255);
-  font-family: Merriweather;
+  font-family: 'Merriweather', serif;
+
   font-size: 22px;
   font-weight: 400;
   line-height: 110%;
