--- a/stylesHeader.css
+++ b/stylesHeader.css
@@ -11,7 +11,8 @@
 }
 .texthorse {
   color: rgb(89, 86, 83);
-  font-family: Golos Text;
+  font-family: 'Golos Text', serif;
+
   font-size: 16.65px;
   font-weight: 700;
   line-height: 108%;
@@ -56,7 +57,8 @@
 }
 .header_text2 {
   color: rgb(49, 49, 49);
-  font-family: Merriweather;
+  font-family: 'Merriweather', serif;
+
   font-size: 60px;
   font-weight: 400;
   line-height: 110%;
@@ -67,7 +69,7 @@
 }
 .header_text3 {
   color: rgb(49, 49, 49);
-  font-family: Merriweather;
+  font-family: 'Merriweather', serif;
   font-size: 60px;
   font-weight: 400;
   line-height: 110%;
@@ -79,7 +81,7 @@
 }
 .header_text4 {
   color: rgb(49, 49, 49);
-  font-family: Golos Text;
+  font-family: 'Golos Text', serif;
   font-size: 18px;
   font-weight: 400;
   line-height: 130%;
@@ -100,7 +102,7 @@
   align-items: center;
   padding: 20px;
   color: rgb(255, 255, 255);
-  font-family: Golos Text;
+  font-family: 'Golos Text', serif;
   font-size: 16px;
   font-weight: 500;
   line-height: 130%;
@@ -123,7 +125,7 @@
   align-items: center;
 
   color: rgb(31, 31, 31);
-  font-family: Golos Text;
+  font-family: 'Golos Text', serif;
   font-size: 16px;
   font-weight: 500;
   line-height: 130%;
@@ -135,7 +137,7 @@
 }
 .btn2 {
   color: rgb(31, 31, 31);
-  font-family: Golos Text;
+  font-family: 'Golos Text', serif;
   font-size: 16px;
   font-weight: 500;
   line-height: 130%;
@@ -156,7 +158,7 @@
 }
 .btn2:hover {
   color: rgb(255, 255, 255);
-  font-family: Golos Text;
+  font-family: 'Golos Text', serif;
   font-size: 16px;
   font-weight: 500;
   line-height: 130%;
